# FinSpark

./: .env.example  .gitignore  README.md  config.yaml  docker-compose.yml  generate-mock-data.js  mock_dataset.csv  requirements.txt
Backend/: .env.example  Dockerfile  app.js  index.js  package-lock.json  package.json
Backend/config/: index.js
Backend/db/: client.js  migrate.js
Backend/middleware/: auth.js  errorHandler.js  rateLimiter.js  upload.js
Frontend/: Dockerfile  eslint.config.js  fix.py  nginx.conf  package-lock.json  package.json  vite.config.js
ML/: .env.example  .gitignore  Dockerfile  README.md  __init__.py  pyproject.toml
ML/api/: dashboard.py  main.py
ML/data/: __init__.py
ML/data/synthetic/: __init__.py  generator.py
ML/ingestion/: detector.py
ML/ingestion/codegen/: track_dart.py
ML/llm_fallback/: __init__.py  router.py
ML/models/: ensemble.py  interpretability.py
ML/models/explicit/: rag_pipeline.py
ML/models/implicit/: lstm_encoder.py  ngram.py
ML/preprocessing/: cooccurrence.py  session_builder.py
ML/scripts/: train_on_synthetic.py
ML/tests/: conftest.py  test_e2e.py  test_models.py
api/: dashboard.py  main.py
docs/: architecture.md  demo-script.md  deployment.md  judge-qa.md  pitch.md  submission-checklist.md
ingestion/: __init__.py  converter.py
kafka-consumer/: Dockerfile  package.json
onprem-agent/: index.js
preprocessing/: __init__.py  pii_masker.py  schema.py
scripts/: generate_report.py
static/: dashboard.html
tests/: test_e2e.py  test_lstm.py  test_preprocessing.py
tracking-sdk/: README.md
(+292 files in other folders)
