[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "finspark-intelligence"
version = "0.1.0"
description = "Machine learning pipeline for Finspark Intelligence"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pandas",
    "numpy",
    "scikit-learn",
    "torch",
    "transformers",
    "sentence-transformers",
    "chromadb",
    "openai",
    "python-dotenv",
    "pyyaml",
    "pytest"
]
